[project]
name = "acidrain-logging"
version = "0.2.0"
description = "Common logging library"
authors = [{name = "Mathieu Lemay", email = "acidrain1@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
include = ["acidrain_logging/py.typed"]
dependencies = [
    "importlib-metadata>=8.5.0",
    "orjson>=3.8.0",
    "pydantic-settings>=2.5.2",
    "pydantic>=2.9.2",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
celery = [
    "celery[redis]>=5.4.0",
]
fastapi = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
]
flask = [
    "flask>=3.0.3",
]
datadog = [
    "datadog>=0.50.1",
    "ddtrace>=2.12.2",
]

[tool.uv]
dev-dependencies = [
    "celery-types>=0.22.0",
    "faker>=29.0.0",
    "httpx>=0.27.2",
    "mypy>=1.11.2",
    "polyfactory>=2.17.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-docker>=3.1.1",
    "pytest-freezer>=0.4.8",
    "pytz>=2024.2",
    "setuptools>=75.1.0",
    "types-pytz>=2024.2.0.20240913",
    "uwsgi>=2.0.26",
]

[tool.coverage.report]
exclude_lines = [
    "# pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
strict = true
show_error_codes = true
plugins = [
    "pydantic.mypy"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests/unit", "tests/module", "tests"]
# Disable anyio to avoid conflict and force asyncio to load before entrypoints
# https://docs.pytest.org/en/6.2.x/writing_plugins.html#plugin-discovery-order-at-tool-startup
addopts = ["-p", "no:anyio", "-p", "asyncio"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:cannot collect test class 'TestWorkController'",
]

[tool.ruff]
exclude = [
    ".venv",
]

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    "COM", # flake8-commas
    "FIX", # flake8-fixme
    "TD", # flake8-todos

    "ANN101", # Missing type annotation for `self` in method
    "ANN102", # Missing type annotation for `cls` in method
    "D10", # Missing docstring in ...
    "D211", # No blank lines allowed before class docstring
    "D212", # Multi-line docstring summary should start at the first line
]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    "classmethod",
    "pydantic.validator",
    "pydantic.field_validator",
    "pydantic.model_validator",
    "pydantic.root_validator"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "FBT001", # Boolean-typed positional argument in function definition
    "PLR2004", # Magic value used in comparison
    "S101", # Use of `assert` detected
    "S105", # Possible hardcoded password
    "S311", # Standard pseudo-random generators are not suitable for security/cryptographic purposes.
]

# [build-system]
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"
